# pycharm-bubbletea

./: README.md  pyproject.toml
bubbletea/: __init__.py  commands.py  errors.py  keys.py  messages.py  model.py  modifiers.py  mouse.py  options.py  program.py  view.py
docs/: commands.md  keys.md  messages.md  model.md  mouse.md  options.md  program.md  view.md
tests/: test_commands.py  test_errors.py  test_keys.py  test_messages.py  test_model.py  test_modifiers.py  test_mouse.py  test_options.py  test_program.py  test_view.py
