[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycharm-bubbletea"
version = "0.1.0"
description = "Python bindings for Bubble Tea — a TUI framework based on The Elm Architecture"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Charmbracelet, Inc. (original Go library)" },
]
keywords = ["tui", "terminal", "elm-architecture", "bubbletea"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/charmbracelet/bubbletea"
Documentation = "https://pkg.go.dev/charm.land/bubbletea/v2"

[tool.setuptools.packages.find]
include = ["bubbletea*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
